# AutomaticCodeGenerator

./: AutomaticCodeGenerator.cpp  CMakeLists.txt  LICENSE  README.md  UML_diagram.drawio
data/class_diagram_Astar/: project.xml
data/class_diagram_advanced/: UML_pjc.vpp  UML_pjc.vpp.bak_000f  UML_pjc.vpp.bak_001d  project.xml
data/class_diagram_medium/: project.xml
data/class_diagram_test/: project.xml
doxygen/: Doxyfile
doxygen/html/: annotated.html  attributeBuilder_8cpp.html  attributeBuilder_8cpp__incl.map  attributeBuilder_8cpp__incl.md5  attributeBuilder_8hpp.html  attributeBuilder_8hpp__dep__incl.map  attributeBuilder_8hpp__dep__incl.md5  attributeBuilder_8hpp__incl.map  attributeBuilder_8hpp__incl.md5  attributeBuilder_8hpp_source.html  classAttributeBuilder-members.html  classAttributeBuilder.html  classAttributeBuilder__coll__graph.map  classAttributeBuilder__inherit__graph.md5  classBuilder_8cpp.html  classBuilder_8cpp__incl.map  classBuilder_8cpp__incl.md5  classBuilder_8hpp.html  classBuilder_8hpp__dep__incl.map  classBuilder_8hpp__dep__incl.md5  classBuilder_8hpp__incl.map  classBuilder_8hpp__incl.md5  classBuilder_8hpp_source.html  classClassBuilder-members.html  classClassBuilder.html  classClassBuilder__coll__graph.md5  classClassBuilder__inherit__graph.map  classClassBuilder__inherit__graph.md5  classCodeBuilder-members.html  classCodeBuilder.html  classCodeBuilder__inherit__graph.map  classCodeBuilder__inherit__graph.md5  classMethodBuilder-members.html  classMethodBuilder.html  classMethodBuilder__inherit__graph.map  classMethodBuilder__inherit__graph.md5  classes.html  (+37 more)
include/: attributeBuilder.hpp  attributesBuilder.h  classBuilder.h  classBuilder.hpp  codeBuilder.h  codeBuilder.hpp  methodBuilder.hpp  parameterClass.h
src/: attributeBuilder.cpp  classBuilder.cpp  codeBuilder.cpp  main.cpp  methodBuilder.cpp  parameterClass.cpp  tempCodeRunnerFile.cpp
(+61 files in other folders)
